Fix flex align issue

--- a/css/blocks/main.css
+++ b/css/blocks/main.css
@@ -13,6 +13,7 @@
 .intro__content {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .intro__column {
